--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="bienvenido-a-mkdocs">Bienvenido a MKDOCS</h1>
+<h1 id="bienvenido-a-mkdocs">Buenas tardes</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-10-15 10:53:08.290372+00:00
+Build Date UTC : 2024-10-15 11:09:37.930307+00:00
 -->
