--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Illya Velychko</title>
+        <title>Hola</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
@@ -20,7 +20,7 @@
     <body class="homepage">
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href=".">Illya Velychko</a>
+                <a class="navbar-brand" href=".">Hola</a>
 
                 <!-- Expanded navigation -->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
@@ -66,7 +66,7 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="bienvenido-a-mkdocs">Buenas tardes</h1>
+<h1 id="bienvenido-a-mkdocs">Bienvenido a MKDOCS</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-10-15 11:09:37.930307+00:00
+Build Date UTC : 2024-10-15 11:22:04.159625+00:00
 -->
