--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Malas tardes</title>
+        <title>Hola</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
@@ -163,5 +163,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2024-10-15 11:22:04.159625+00:00
+Build Date UTC : 2024-10-15 11:41:32.791532+00:00
 -->
