--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Adiossssssssss2121</title>
+        <title>Adiossssssssss2121gi</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/font-awesome.min.css" rel="stylesheet">
         <link href="css/base.css" rel="stylesheet">
@@ -66,7 +66,7 @@
 </div></div>
                     <div class="col-md-9" role="main">
 
-<h1 id="bienvenido-a-mkdocs">mkdocs mkdocs mkdocs ffffffffffffffgi</h1>
+<h1 id="bienvenido-a-mkdocs">Bievenido a mkdocs</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
