--- a/404.html
+++ b/404.html
@@ -65,6 +65,20 @@
         <!-- block menu -->
         <ul class="mb-5 drac-list drac-list-none">
             
+            <li class="drac-box">
+                <a href="/."
+                    class="
+                    drac-anchor d-inline-flex align-items-center border-0 drac-text-purple--hover">
+                    Bienvenido a MKDOCS
+                </a>
+            </li>
+            <li class="drac-box">
+                <a href="/Sprint%201/"
+                    class="
+                    drac-anchor d-inline-flex align-items-center border-0 drac-text-purple--hover">
+                    Sprint 1
+                </a>
+            </li>
         </ul>
         <!-- endblock -->
     </div>
