--- a/index.html
+++ b/index.html
@@ -65,6 +65,20 @@
         <!-- block menu -->
         <ul class="mb-5 drac-list drac-list-none">
             
+            <li class="drac-box">
+                <a href="."
+                    class=" active 
+                    drac-anchor d-inline-flex align-items-center border-0 drac-text-purple--hover">
+                    Bienvenido a MKDOCS
+                </a>
+            </li>
+            <li class="drac-box">
+                <a href="Sprint%201/"
+                    class="
+                    drac-anchor d-inline-flex align-items-center border-0 drac-text-purple--hover">
+                    Sprint 1
+                </a>
+            </li>
         </ul>
         <!-- endblock -->
     </div>
@@ -90,6 +104,22 @@
                     <!-- block preview -->
                     <li class="nav-item">
                             
+        <div class="container">
+            <div class="row row-preview">
+                <div class="col">
+                    <a 
+                        class="btn-preview drac-btn drac-text-white--hover disabled">
+                        <i class="fa fa-arrow-left"></i> Previous
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="Sprint%201/"
+                        class="btn-preview drac-btn drac-btn-outline drac-text-white drac-text-cyan-green--hover" style="padding-left: 3%;">
+                        Next <i class="fa fa-arrow-right"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
                     </li>
                     <!--  endblock -->
 
